--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
     font-size: 16px;
 }
 
-.col-6 {
+.col-5 {
     margin: 10px;
-    padding: 10px;
+    padding: 0;
     background-color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -50,4 +50,13 @@ img {
 
 .col-6 {
     float: left;
+}
+#portfolio_footer {
+    padding: 0;
+    background-color: lightseagreen; 
+    width: 100%;
+     margin: 0;
+     padding: 0;
+    text-align: center;
+
 }
