--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
+    font-family: "Source Sans Pro", sans-serif;    
 }
 
 body {
@@ -19,7 +19,6 @@ body {
     padding: 10px;
     background-color: lightseagreen;
     color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     font-weight: bold;
 
@@ -27,7 +26,6 @@ body {
 
 
 .col-8 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 16px;
 }
 
@@ -35,7 +33,6 @@ body {
     margin: 10px;
     padding: 0;
     background-color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h3 {
@@ -60,5 +57,10 @@ img {
      margin: 0;
      padding: 0;
     text-align: center;
+    color: white;
+    font-size: larger;
+}
 
+a {
+    color: white;
 }
