--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 
+
 .col-2 {
     float: left;
     text-align: center;
@@ -63,4 +64,10 @@ img {
 
 a {
     color: white;
+}
+
+footer {
+    text-align: center;
+    color: lightseagreen;
+    font-size: smaller;
 }
